--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/button_add_recipe"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Add Recipe"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <ListView
         android:id="@+id/list_view_recipes"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/button_add_recipe"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toTopOf="@id/button_add_recipe" />
+
+    <ImageButton
+        android:id="@+id/button_add_recipe"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/baseline_add_24"
+        android:contentDescription="@string/add_recipe_button_description"
+        app:layout_constraintTop_toBottomOf="@id/list_view_recipes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        android:layout_marginTop="8dp" />
+
+    <ImageButton
+        android:id="@+id/button_delete_recipe"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/delete_button"
+        android:contentDescription="@string/delete_recipe_button_description"
+        app:layout_constraintTop_toBottomOf="@id/list_view_recipes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
