--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,20 @@
         app:layout_constraintTop_toBottomOf="@id/list_view_recipes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         android:layout_marginTop="8dp" />
+
+    <ImageButton
+        android:id="@+id/button_search_recipe"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/search_button"
+        app:layout_constraintTop_toBottomOf="@id/list_view_recipes"
+        app:layout_constraintStart_toEndOf="@id/button_add_recipe"
+        app:layout_constraintEnd_toStartOf="@id/button_delete_recipe"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" />
 
     <ImageButton
         android:id="@+id/button_delete_recipe"
@@ -37,8 +49,7 @@
         app:layout_constraintTop_toBottomOf="@id/list_view_recipes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.75"
         android:layout_marginTop="8dp"
-        android:layout_marginStart="8dp" />
+        android:layout_marginEnd="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
